fixing color gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -78,3 +78,7 @@ nav {
     background:#999;
 }
 
+.container {
+    min-height: 100%;
+    
+}
